[tool.poetry]
name = "django-sage-contact"
version = "0.1.0"
description = ""
authors = ["Sepehr Akbarzadeh <sa.goldeneagle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"
pytest = "^8.3.2"
flake8 = "^7.1.0"
tox = "^4.16.0"
coverage = "^7.6.0"
pre-commit = "^3.8.0"
sphinx = "^7.4.7"
pylint = "^3.2.6"
pytest-cov = "^5.0.0"
sphinx-rtd-theme = "^2.0.0"
commitizen = "^3.28.0"
docformatter = "^1.7.5"
types-setuptools = "^71.1.0.20240726"
codecov = "^2.1.13"
setuptools = "^72.0.0"
wheel = "^0.43.0"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
